--- a/404.html
+++ b/404.html
@@ -63,9 +63,9 @@
     document.body.className = prefersDark ? 'dark' : 'light';
   </script>
 
-  <div class="emoji">⏳</div>
+  <div class="emoji">⏳🍳</div>
   <h1>This page is still simmering...</h1>
-  <p>Oops! Looks like this page isn’t complete yet. But don’t worry — good things take time to cook. 🍳</p>
-  <a href="/">Return to the Cookbook</a>
+  <p>Oops! Looks like this page isn’t complete yet. But don’t worry — good things take time to cook.</p>
+  <a href="/">Return to the Yumlog</a>
 </body>
 </html>
