--- a/404.html
+++ b/404.html
@@ -66,6 +66,6 @@
   <div class="emoji">⏳🍳</div>
   <h1>This page is still simmering...</h1>
   <p>Oops! Looks like this page isn’t complete yet. But don’t worry — good things take time to cook.</p>
-  <a href="/">Return to the Yumlog</a>
+  <a href="/yumlog/">Return to Yumlog</a>
 </body>
 </html>
